--- a/boss.css
+++ b/boss.css
@@ -128,7 +128,7 @@
             .job-grid{
                 gap: 20px;
                 display: grid;
-                grid-template-columns: 400px 400px 400px;
+                grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             }
 
             .job-card{
@@ -161,4 +161,5 @@
                 padding: 30px;
                 color: white;
                 background-color: #333;
+
             }
